# clm-ml-jax

./: .gitignore  .gitmodules  README.md  TRANSLATION_STATUS.txt  pytest.ini
.github/: copilot-instructions.md
docs/: TRANSLATION_ORDER.txt  code_review_report_2024-12.md  src_main_translation_report.md
jax-agents/: .gitignore  GETTING_STARTED.md  README.md  WORKFLOW_SCRIPT_GUIDE.md  config.yaml  pyproject.toml  run_translation_workflow.sh
jax-agents/examples/: README.md  generate_tests.py  repair_agent_example.py  translate_with_json.py
jax-agents/src/jax_agents/: __init__.py  base_agent.py  repair_agent.py  test_agent.py  translator.py
jax-agents/src/jax_agents/prompts/: __init__.py  repair_prompts.py  test_prompts_simplified.py  translation_prompts_v2.py
jax-agents/src/jax_agents/utils/: __init__.py  config_loader.py
jax-agents/static_analysis_output/: analysis_results.json  analysis_summary.txt  fortran_analysis.json  translation_units.json
jax-agents/static_analysis_output/graphs/: entity_graph.graphml  entity_graph.json  module_graph.json
jax-agents/static_analysis_output/visualizations/: interactive_dependencies.html
jobs/: generate_tests.sbatch  run_tests.sbatch
jobs/logs/: generate_tests_clm-ml-v1_5458345.err  generate_tests_clm-ml-v1_5458345.out
src/cime_src_share_util/: shr_file_mod.py  shr_orb_mod.py
src/clm_src_biogeophys/: CanopyStateType.py  EnergyFluxType.py  FrictionVelocityMod.py  SoilStateInitTimeConstMod.py  SoilStateType.py  SoilTemperatureMod.py  SoilWaterMovementMod.py  SolarAbsorbedType.py  SurfaceAlbedoMod.py  SurfaceAlbedoType.py  SurfaceResistanceMod.py  TemperatureType.py  WaterFluxType.py  WaterStateType.py
src/clm_src_cpl/: lnd_comp_mct.py
src/clm_src_main/: CLMml.py  ColumnType.py  GridcellType.py  PatchType.py  __init__.py  abortutils.py  atm2lndType.py  clm_driver.py  clm_initializeMod.py  clm_instMod.py  (+10 more)
tests/: conftest.py
(+104 files in other folders)
